# cricore-raci-finance-demo

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: EXECUTIVE_OVERVIEW.md  GOVERNANCE_FLOW.md  RACI_MODEL.md
runner/: run_demo.py
scenarios/budget_reallocation/: SCENARIO.md  policy.yaml  propoasal.json  run_context_valid.json  run_context_violation.json
