[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricore-raci-finance-demo"
version = "0.3.3"
description = "Demonstration of CRI-CORE commit gating in a finance RACI scenario."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

dependencies = [
    "cricore>=0.5.0"
]

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://waveframelabs.org"
Repository = "https://github.com/Waveframe-Labs/cricore-raci-finance-demo"